--- a/ktor-server-lambda-sample/pom.xml
+++ b/ktor-server-lambda-sample/pom.xml
@@ -16,10 +16,9 @@
   <description>A sample project using ktor-server-lambda</description>
 
   <properties>
-    <ktor_version>1.4.0</ktor_version>
-    <kotlin_version>1.4.0</kotlin_version>
-    <kotlin_1.3_version>1.3.72</kotlin_1.3_version>
-    <logback_version>1.2.1</logback_version>
+    <ktor_version>1.6.7</ktor_version>
+    <kotlin_version>1.6.10</kotlin_version>
+    <logback_version>1.2.10</logback_version>
   </properties>
 
   <dependencies>
@@ -70,9 +69,22 @@
     </resources>
     <plugins>
       <plugin>
+        <groupId>org.jetbrains.dokka</groupId>
+        <artifactId>dokka-maven-plugin</artifactId>
+        <version>1.6.10</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>javadocJar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <artifactId>kotlin-maven-plugin</artifactId>
         <groupId>org.jetbrains.kotlin</groupId>
-        <version>${kotlin_1.3_version}</version>
+        <version>${kotlin_version}</version>
         <executions>
           <execution>
             <id>compile</id>
@@ -99,12 +111,12 @@
           <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-maven-noarg</artifactId>
-            <version>${kotlin_1.3_version}</version>
+            <version>${kotlin_version}</version>
           </dependency>
           <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-maven-allopen</artifactId>
-            <version>${kotlin_1.3_version}</version>
+            <version>${kotlin_version}</version>
           </dependency>
         </dependencies>
       </plugin>
